fix: add show-policy buttons, change z-index of policy

--- a/sources/src/sass/blocks/_policy.scss
+++ b/sources/src/sass/blocks/_policy.scss
@@ -2,7 +2,7 @@
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 2;
+    z-index: 4;
     width: 100%;
     height: 100%;
     display: none;
@@ -46,8 +46,8 @@
 
 .policy__close {
     position: fixed;
-    top: 40px;
-    right: 50px;
+    top: 50px;
+    right: 3%;
     z-index: 2;
     width: 40px;
     height: 40px;
